--- a/styles.css
+++ b/styles.css
@@ -11,21 +11,45 @@ h2 {
   font-size: 30px; }
 
 /* line 14, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-button {
+.control-btns {
   background-color: #28262f;
   color: white;
   width: 50px;
   height: 50px;
-  border-radius: 4px;
   border: none; }
-  /* line 21, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  button:hover {
+  /* line 20, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  .control-btns:hover {
     box-shadow: 0px 0px 10px grey; }
-  /* line 24, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  button:focus {
+  /* line 23, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  .control-btns:focus {
     outline: none; }
 
-/* line 29, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 28, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+#timer-toggle {
+  background-color: #28262f;
+  color: white;
+  font-size: 50px;
+  width: 50%;
+  height: 80px;
+  border: none; }
+  /* line 35, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  #timer-toggle:hover {
+    box-shadow: 0px 0px 10px grey; }
+  /* line 38, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  #timer-toggle:focus {
+    outline: none; }
+
+/* line 43, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+.left-border {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px; }
+
+/* line 47, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+.right-border {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px; }
+
+/* line 52, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .clock-controls {
   margin: 0 auto;
   display: flex;
@@ -33,20 +57,28 @@ button {
   flex-direction: row;
   justify-content: space-around; }
 
-/* line 37, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 60, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .btn-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin: 0 auto;
   width: 150px; }
-  /* line 43, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 66, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   .btn-container h3 {
     font-size: 44px;
     width: 100%;
     height: 50px;
     margin: 0;
-    background-color: #535353;
+    background-color: #606060;
     color: white; }
+
+/* line 76, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+#clock {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 30px;
+  font-size: 100px;
+  background-color: aquamarine; }
 
 /*# sourceMappingURL=styles.css.map */
