--- a/styles.scss
+++ b/styles.scss
@@ -11,12 +11,11 @@ h2 {
     font-size: 30px;
 }
 
-button {
+.control-btns {
     background-color: $button-color;
     color: white;
     width: 50px;
     height: 50px;
-    border-radius: 4px;
     border: none;
     &:hover {
         box-shadow: 0px 0px 10px grey;
@@ -24,6 +23,30 @@ button {
     &:focus {
         outline: none;
     }
+}
+
+#timer-toggle{
+    background-color: $button-color;
+    color: white;
+    font-size: 50px;
+    width: 50%;
+    height: 80px;
+    border: none;
+    &:hover {
+        box-shadow: 0px 0px 10px grey;
+    }
+    &:focus {
+        outline: none;
+    }
+}
+
+.left-border {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.right-border {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 .clock-controls {
@@ -45,7 +68,15 @@ button {
         width: 100%;
         height: 50px;
         margin: 0;
-        background-color: #535353;
+        background-color: #606060;
         color: white;
     }
+}
+
+#clock {
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 30px;
+    font-size: 100px;
+    background-color: aquamarine;
 }
