--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,62 @@
-/* line 2, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+@import url("https://fonts.googleapis.com/css?family=Sansita:400,700,800,900");
+/* line 3, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 body {
-  text-align: center; }
-  /* line 4, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  text-align: center;
+  font-family: 'Sansita', sans-serif; }
+  /* line 6, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   body main h1 {
-    font-size: 80px;
-    margin-bottom: 10px; }
+    font-size: 100px;
+    margin-top: 20px;
+    margin-bottom: 20px; }
 
-/* line 10, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 13, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 h2 {
-  font-size: 30px; }
+  font-size: 40px;
+  margin: 10px; }
 
-/* line 14, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 18, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .control-btns {
   background-color: #28262f;
   color: white;
-  width: 50px;
+  font-size: 30px;
+  width: 70px;
   height: 50px;
   border: none; }
-  /* line 20, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 25, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   .control-btns:hover {
     box-shadow: 0px 0px 10px grey; }
-  /* line 23, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 28, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   .control-btns:focus {
     outline: none; }
 
-/* line 28, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 33, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 #timer-toggle {
   background-color: #28262f;
   color: white;
   font-size: 50px;
   width: 50%;
   height: 80px;
-  border: none; }
-  /* line 35, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  border: none;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px; }
+  /* line 42, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   #timer-toggle:hover {
     box-shadow: 0px 0px 10px grey; }
-  /* line 38, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 45, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   #timer-toggle:focus {
     outline: none; }
 
-/* line 43, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 50, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .left-border {
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px; }
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px; }
 
-/* line 47, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 54, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .right-border {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px; }
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px; }
 
-/* line 52, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 59, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .clock-controls {
   margin: 0 auto;
   display: flex;
@@ -57,28 +64,33 @@ h2 {
   flex-direction: row;
   justify-content: space-around; }
 
-/* line 60, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 67, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .btn-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin: 0 auto;
-  width: 150px; }
-  /* line 66, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  .btn-container h3 {
+  width: 200px; }
+  /* line 73, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  .btn-container input {
     font-size: 44px;
-    width: 100%;
-    height: 50px;
+    text-align: center;
+    width: 80%;
+    height: 48px;
     margin: 0;
+    border: none;
     background-color: #606060;
     color: white; }
 
-/* line 76, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 85, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 #clock {
   width: 50%;
   margin: 0 auto;
   margin-top: 30px;
-  font-size: 100px;
+  font-size: 150px;
+  color: black;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   background-color: aquamarine; }
 
 /*# sourceMappingURL=styles.css.map */
