--- a/styles.scss
+++ b/styles.scss
@@ -1,20 +1,25 @@
+@import url('https://fonts.googleapis.com/css?family=Sansita:400,700,800,900');
 $button-color: #28262f;
 body {
     text-align: center;
+    font-family: 'Sansita', sans-serif;
     main h1 {
-        font-size: 80px;
-        margin-bottom: 10px;
+        font-size: 100px;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 }
 
 h2 {
-    font-size: 30px;
+    font-size: 40px;
+    margin: 10px;
 }
 
 .control-btns {
     background-color: $button-color;
     color: white;
-    width: 50px;
+    font-size: 30px;
+    width: 70px;
     height: 50px;
     border: none;
     &:hover {
@@ -32,6 +37,8 @@ h2 {
     width: 50%;
     height: 80px;
     border: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     &:hover {
         box-shadow: 0px 0px 10px grey;
     }
@@ -41,12 +48,12 @@ h2 {
 }
 
 .left-border {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 .right-border {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .clock-controls {
@@ -62,12 +69,14 @@ h2 {
     flex-direction: row;
     justify-content: center;
     margin: 0 auto;
-    width: 150px;
-    h3 {
+    width: 200px;
+    input {
         font-size: 44px;
-        width: 100%;
-        height: 50px;
+        text-align: center;
+        width: 80%;
+        height: 48px;
         margin: 0;
+        border: none;
         background-color: #606060;
         color: white;
     }
@@ -77,6 +86,9 @@ h2 {
     width: 50%;
     margin: 0 auto;
     margin-top: 30px;
-    font-size: 100px;
+    font-size: 150px;
+    color: black;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     background-color: aquamarine;
 }
