--- a/styles.css
+++ b/styles.css
@@ -2,19 +2,32 @@
 /* line 3, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 body {
   text-align: center;
-  font-family: 'Sansita', sans-serif; }
-  /* line 6, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  font-family: 'Sansita', sans-serif;
+  background-color: #3a8bc2; }
+  /* line 7, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  body main {
+    margin: 0 auto;
+    padding: 20px;
+    width: 800px;
+    border-radius: 10px;
+    background: #ECE9E6;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #ECE9E6, #FFFFFF);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #ECE9E6, #FFFFFF);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+  /* line 19, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   body main h1 {
     font-size: 100px;
-    margin-top: 20px;
-    margin-bottom: 20px; }
+    text-shadow: 0px 1px 0px #999, 0px 2px 0px #888, 0px 3px 0px #777, 0px 4px 0px #666, 0px 5px 0px #555, 0px 6px 0px #444, 0px 7px 0px #333, 0px 8px 7px #001135;
+    margin: 0; }
 
-/* line 13, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 26, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 h2 {
   font-size: 40px;
   margin: 10px; }
 
-/* line 18, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 31, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .control-btns {
   background-color: #28262f;
   color: white;
@@ -22,56 +35,63 @@ h2 {
   width: 70px;
   height: 50px;
   border: none; }
-  /* line 25, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 38, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   .control-btns:hover {
-    box-shadow: 0px 0px 10px grey; }
-  /* line 28, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    cursor: pointer; }
+  /* line 41, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   .control-btns:focus {
     outline: none; }
 
-/* line 33, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 46, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 #timer-toggle {
   background-color: #28262f;
   color: white;
   font-size: 50px;
-  width: 50%;
+  width: 90%;
   height: 80px;
   border: none;
   border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px; }
-  /* line 42, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  border-bottom-right-radius: 10px;
+  border-bottom: 5px solid #161616;
+  text-shadow: 0px -2px #161616; }
+  /* line 57, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   #timer-toggle:hover {
-    box-shadow: 0px 0px 10px grey; }
-  /* line 45, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    cursor: pointer; }
+  /* line 60, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   #timer-toggle:focus {
     outline: none; }
+  /* line 63, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  #timer-toggle:active {
+    transform: translate(0px, 0px);
+    -webkit-transform: translate(0px, 0px);
+    border-bottom: 0px solid; }
 
-/* line 50, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 70, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .left-border {
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px; }
 
-/* line 54, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 75, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .right-border {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px; }
 
-/* line 59, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 80, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .clock-controls {
   margin: 0 auto;
   display: flex;
-  width: 50%;
+  width: 100%;
   flex-direction: row;
   justify-content: space-around; }
 
-/* line 67, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 88, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .btn-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin: 0 auto;
   width: 200px; }
-  /* line 73, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 94, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   .btn-container input {
     font-size: 44px;
     text-align: center;
@@ -80,17 +100,54 @@ h2 {
     margin: 0;
     border: none;
     background-color: #606060;
-    color: white; }
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7d7e7d+0,565656+100,7c7c7c+100 */
+    background: -moz-linear-gradient(top, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    color: white;
+    pointer-events: none; }
 
-/* line 85, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 114, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 #clock {
-  width: 50%;
+  width: 90%;
   margin: 0 auto;
   margin-top: 30px;
   font-size: 150px;
-  color: black;
+  text-shadow: none;
+  padding-bottom: 20px;
+  color: rgba(45, 45, 45, 0.9);
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  background-color: aquamarine; }
+  background-color: aquamarine;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cedbe9+0,aac5de+17,6199c7+50,3a84c3+51,419ad6+59,4bb8f0+71,3a8bc2+84,26558b+100;Blue+Gloss */
+  background: -moz-linear-gradient(top, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedbe9', endColorstr='#26558b', GradientType=0);
+  /* IE6-9 */ }
+
+/* line 136, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+.animate {
+  transition: all 0.1s;
+  -webkit-transition: all 0.1s; }
+
+/* line 141, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+.black {
+  background-color: #28262f;
+  border-bottom: 5px solid #161616;
+  text-shadow: 0px -2px #161616; }
+
+/* line 148, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+.active,
+button:active {
+  transform: translate(0px, 0px);
+  -webkit-transform: translate(0px, 0px);
+  border-bottom: 0px solid; }
 
 /*# sourceMappingURL=styles.css.map */
