--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,12 @@
 body {
   text-align: center;
   font-family: 'Sansita', sans-serif;
-  background-color: #3a8bc2; }
-  /* line 7, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  background-color: #3a8bc2;
+  margin: 0; }
+  /* line 8, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   body main {
     margin: 0 auto;
+    margin-top: 10px;
     padding: 20px;
     width: 800px;
     border-radius: 10px;
@@ -16,18 +18,18 @@ body {
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #ECE9E6, #FFFFFF);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
-  /* line 19, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 21, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   body main h1 {
     font-size: 100px;
     text-shadow: 0px 1px 0px #999, 0px 2px 0px #888, 0px 3px 0px #777, 0px 4px 0px #666, 0px 5px 0px #555, 0px 6px 0px #444, 0px 7px 0px #333, 0px 8px 7px #001135;
     margin: 0; }
 
-/* line 26, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 28, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 h2 {
   font-size: 40px;
   margin: 10px; }
 
-/* line 31, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 33, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .control-btns {
   background-color: #28262f;
   color: white;
@@ -35,14 +37,14 @@ h2 {
   width: 70px;
   height: 50px;
   border: none; }
-  /* line 38, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 40, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   .control-btns:hover {
     cursor: pointer; }
-  /* line 41, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 43, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   .control-btns:focus {
     outline: none; }
 
-/* line 46, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 48, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 #timer-toggle {
   background-color: #28262f;
   color: white;
@@ -54,29 +56,29 @@ h2 {
   border-bottom-right-radius: 10px;
   border-bottom: 5px solid #161616;
   text-shadow: 0px -2px #161616; }
-  /* line 57, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 59, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   #timer-toggle:hover {
     cursor: pointer; }
-  /* line 60, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 62, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   #timer-toggle:focus {
     outline: none; }
-  /* line 63, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 65, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   #timer-toggle:active {
     transform: translate(0px, 0px);
     -webkit-transform: translate(0px, 0px);
     border-bottom: 0px solid; }
 
-/* line 70, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 72, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .left-border {
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px; }
 
-/* line 75, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 77, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .right-border {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px; }
 
-/* line 80, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 82, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .clock-controls {
   margin: 0 auto;
   display: flex;
@@ -84,14 +86,14 @@ h2 {
   flex-direction: row;
   justify-content: space-around; }
 
-/* line 88, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 90, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .btn-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin: 0 auto;
   width: 200px; }
-  /* line 94, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 96, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   .btn-container input {
     font-size: 44px;
     text-align: center;
@@ -110,7 +112,7 @@ h2 {
     color: white;
     pointer-events: none; }
 
-/* line 114, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 116, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 #clock-container {
   width: 90%;
   margin: 0 auto;
@@ -128,29 +130,29 @@ h2 {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedbe9', endColorstr='#26558b', GradientType=0);
   /* IE6-9 */ }
-  /* line 131, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 133, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   #clock-container h1 {
-    font-size: 150px;
+    font-size: 120px;
     text-shadow: none;
     color: rgba(45, 45, 45, 0.9); }
-  /* line 136, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 138, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   #clock-container p {
     margin: 0;
     font-size: 20px;
     color: rgba(45, 45, 45, 0.9); }
 
-/* line 143, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 145, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .animate {
   transition: all 0.1s;
   -webkit-transition: all 0.1s; }
 
-/* line 148, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 150, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .black {
   background-color: #28262f;
   border-bottom: 5px solid #161616;
   text-shadow: 0px -2px #161616; }
 
-/* line 155, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 157, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .active,
 button:active {
   transform: translate(0px, 0px);
