--- a/styles.scss
+++ b/styles.scss
@@ -4,8 +4,10 @@ body {
     text-align: center;
     font-family: 'Sansita', sans-serif;
     background-color: #3a8bc2;
+    margin: 0;
     main {
         margin: 0 auto;
+        margin-top: 10px;
         padding: 20px;
         width: 800px;
         border-radius: 10px;
@@ -129,7 +131,7 @@ h2 {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedbe9', endColorstr='#26558b', GradientType=0);
     /* IE6-9 */
     h1 {
-        font-size: 150px;
+        font-size: 120px;
         text-shadow: none;
         color: rgba(45, 45, 45, 0.90);
     }
