Responsiveness added for smaller screens

--- a/styles.scss
+++ b/styles.scss
@@ -10,6 +10,8 @@ body {
         margin-top: 10px;
         padding: 20px;
         width: 800px;
+        transition: all 1.5s;
+        -webkit-transition: all 1.5s;
         border-radius: 10px;
         background: #ECE9E6;
         /* fallback for old browsers */
@@ -17,55 +19,29 @@ body {
         /* Chrome 10-25, Safari 5.1-6 */
         background: linear-gradient(to left, #ECE9E6, #FFFFFF);
         /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        @media (max-width: 842px) {
+            width: 300px;
+        }
     }
     main h1 {
         font-size: 100px;
         text-shadow: 0px 1px 0px #999, 0px 2px 0px #888, 0px 3px 0px #777, 0px 4px 0px #666, 0px 5px 0px #555, 0px 6px 0px #444, 0px 7px 0px #333, 0px 8px 7px #001135;
         margin: 0;
+        transition: all 1.5s;
+        -webkit-transition: all 1.5s;
+        @media (max-width: 842px) {
+            font-size: 55px;
+        }
     }
 }
 
 h2 {
     font-size: 40px;
     margin: 10px;
-}
-
-.control-btns {
-    background-color: $button-color;
-    color: white;
-    font-size: 30px;
-    width: 70px;
-    height: 50px;
-    border: none;
-    &:hover {
-        cursor: pointer;
-    }
-    &:focus {
-        outline: none;
-    }
-}
-
-#timer-toggle {
-    background-color: $button-color;
-    color: white;
-    font-size: 50px;
-    width: 90%;
-    height: 80px;
-    border: none;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-bottom: 5px solid #161616;
-    text-shadow: 0px -2px #161616;
-    &:hover {
-        cursor: pointer;
-    }
-    &:focus {
-        outline: none;
-    }
-    &:active {
-        transform: translate(0px, 0px);
-        -webkit-transform: translate(0px, 0px);
-        border-bottom: 0px solid;
+    transition: all 1.5s;
+    -webkit-transition: all 1.5s;
+    @media (max-width: 842px) {
+        font-size: 20px;
     }
 }
 
@@ -93,6 +69,11 @@ h2 {
     justify-content: center;
     margin: 0 auto;
     width: 200px;
+    transition: all 1.5s;
+    -webkit-transition: all 1.5s;
+    @media (max-width: 842px) {
+        width: 100px;
+    }
     input {
         font-size: 44px;
         text-align: center;
@@ -110,6 +91,64 @@ h2 {
         /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
         color: white;
         pointer-events: none;
+        transition: all 1.5s;
+        -webkit-transition: all 1.5s;
+        @media (max-width: 842px) {
+            width: 40%;
+            height: 23px;
+            font-size: 22px;
+        }
+    }
+}
+
+.control-btns {
+    background-color: $button-color;
+    color: white;
+    font-size: 30px;
+    width: 70px;
+    height: 50px;
+    border: none;
+    &:hover {
+        cursor: pointer;
+    }
+    &:focus {
+        outline: none;
+    }
+    transition: all 1.5s;
+    -webkit-transition: all 1.5s;
+    @media (max-width: 842px) {
+        width: 40px;
+        height: 25px;
+        font-size: 15px;
+    }
+}
+
+#timer-toggle {
+    background-color: $button-color;
+    color: white;
+    font-size: 50px;
+    width: 90%;
+    height: 80px;
+    border: none;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom: 5px solid #161616;
+    text-shadow: 0px -2px #161616;
+    &:hover {
+        cursor: pointer;
+    }
+    &:focus {
+        outline: none;
+    }
+    &:active {
+        transform: translate(0px, 0px);
+        -webkit-transform: translate(0px, 0px);
+        border-bottom: 0px solid;
+    }
+    transition: all 1.5s;
+    -webkit-transition: all 1.5s;
+    @media (max-width: 842px) {
+        font-size: 25px;
     }
 }
 
@@ -134,8 +173,13 @@ h2 {
         font-size: 120px;
         text-shadow: none;
         color: rgba(45, 45, 45, 0.90);
+        transition: all 1.5s;
+        -webkit-transition: all 1.5s;
+        @media (max-width: 842px) {
+            font-size: 60px;
+        }
     }
-    p{
+    p {
         margin: 0;
         font-size: 20px;
         color: rgba(45, 45, 45, 0.90);
