--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,8 @@ body {
     margin-top: 10px;
     padding: 20px;
     width: 800px;
+    transition: all 1.5s;
+    -webkit-transition: all 1.5s;
     border-radius: 10px;
     background: #ECE9E6;
     /* fallback for old browsers */
@@ -18,67 +20,44 @@ body {
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #ECE9E6, #FFFFFF);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
-  /* line 21, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    @media (max-width: 842px) {
+      /* line 8, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+      body main {
+        width: 300px; } }
+  /* line 26, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   body main h1 {
     font-size: 100px;
     text-shadow: 0px 1px 0px #999, 0px 2px 0px #888, 0px 3px 0px #777, 0px 4px 0px #666, 0px 5px 0px #555, 0px 6px 0px #444, 0px 7px 0px #333, 0px 8px 7px #001135;
-    margin: 0; }
+    margin: 0;
+    transition: all 1.5s;
+    -webkit-transition: all 1.5s; }
+    @media (max-width: 842px) {
+      /* line 26, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+      body main h1 {
+        font-size: 55px; } }
 
-/* line 28, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 38, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 h2 {
   font-size: 40px;
-  margin: 10px; }
-
-/* line 33, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-.control-btns {
-  background-color: #28262f;
-  color: white;
-  font-size: 30px;
-  width: 70px;
-  height: 50px;
-  border: none; }
-  /* line 40, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  .control-btns:hover {
-    cursor: pointer; }
-  /* line 43, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  .control-btns:focus {
-    outline: none; }
+  margin: 10px;
+  transition: all 1.5s;
+  -webkit-transition: all 1.5s; }
+  @media (max-width: 842px) {
+    /* line 38, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    h2 {
+      font-size: 20px; } }
 
 /* line 48, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-#timer-toggle {
-  background-color: #28262f;
-  color: white;
-  font-size: 50px;
-  width: 90%;
-  height: 80px;
-  border: none;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  border-bottom: 5px solid #161616;
-  text-shadow: 0px -2px #161616; }
-  /* line 59, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  #timer-toggle:hover {
-    cursor: pointer; }
-  /* line 62, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  #timer-toggle:focus {
-    outline: none; }
-  /* line 65, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  #timer-toggle:active {
-    transform: translate(0px, 0px);
-    -webkit-transform: translate(0px, 0px);
-    border-bottom: 0px solid; }
-
-/* line 72, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .left-border {
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px; }
 
-/* line 77, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 53, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .right-border {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px; }
 
-/* line 82, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 58, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .clock-controls {
   margin: 0 auto;
   display: flex;
@@ -86,14 +65,20 @@ h2 {
   flex-direction: row;
   justify-content: space-around; }
 
-/* line 90, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 66, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .btn-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin: 0 auto;
-  width: 200px; }
-  /* line 96, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  width: 200px;
+  transition: all 1.5s;
+  -webkit-transition: all 1.5s; }
+  @media (max-width: 842px) {
+    /* line 66, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    .btn-container {
+      width: 100px; } }
+  /* line 77, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   .btn-container input {
     font-size: 44px;
     text-align: center;
@@ -110,9 +95,70 @@ h2 {
     background: linear-gradient(to bottom, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     color: white;
-    pointer-events: none; }
+    pointer-events: none;
+    transition: all 1.5s;
+    -webkit-transition: all 1.5s; }
+    @media (max-width: 842px) {
+      /* line 77, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+      .btn-container input {
+        width: 40%;
+        height: 23px;
+        font-size: 22px; } }
 
-/* line 116, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 104, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+.control-btns {
+  background-color: #28262f;
+  color: white;
+  font-size: 30px;
+  width: 70px;
+  height: 50px;
+  border: none;
+  transition: all 1.5s;
+  -webkit-transition: all 1.5s; }
+  /* line 111, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  .control-btns:hover {
+    cursor: pointer; }
+  /* line 114, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  .control-btns:focus {
+    outline: none; }
+  @media (max-width: 842px) {
+    /* line 104, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    .control-btns {
+      width: 40px;
+      height: 25px;
+      font-size: 15px; } }
+
+/* line 126, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+#timer-toggle {
+  background-color: #28262f;
+  color: white;
+  font-size: 50px;
+  width: 90%;
+  height: 80px;
+  border: none;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom: 5px solid #161616;
+  text-shadow: 0px -2px #161616;
+  transition: all 1.5s;
+  -webkit-transition: all 1.5s; }
+  /* line 137, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  #timer-toggle:hover {
+    cursor: pointer; }
+  /* line 140, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  #timer-toggle:focus {
+    outline: none; }
+  /* line 143, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  #timer-toggle:active {
+    transform: translate(0px, 0px);
+    -webkit-transform: translate(0px, 0px);
+    border-bottom: 0px solid; }
+  @media (max-width: 842px) {
+    /* line 126, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    #timer-toggle {
+      font-size: 25px; } }
+
+/* line 155, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 #clock-container {
   width: 90%;
   margin: 0 auto;
@@ -130,29 +176,35 @@ h2 {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedbe9', endColorstr='#26558b', GradientType=0);
   /* IE6-9 */ }
-  /* line 133, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* line 172, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   #clock-container h1 {
     font-size: 120px;
     text-shadow: none;
-    color: rgba(45, 45, 45, 0.9); }
-  /* line 138, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    color: rgba(45, 45, 45, 0.9);
+    transition: all 1.5s;
+    -webkit-transition: all 1.5s; }
+    @media (max-width: 842px) {
+      /* line 172, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+      #clock-container h1 {
+        font-size: 60px; } }
+  /* line 182, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
   #clock-container p {
     margin: 0;
     font-size: 20px;
     color: rgba(45, 45, 45, 0.9); }
 
-/* line 145, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 189, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .animate {
   transition: all 0.1s;
   -webkit-transition: all 0.1s; }
 
-/* line 150, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 194, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .black {
   background-color: #28262f;
   border-bottom: 5px solid #161616;
   text-shadow: 0px -2px #161616; }
 
-/* line 157, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+/* line 201, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .active,
 button:active {
   transform: translate(0px, 0px);
