--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     margin-top: 10px;
     padding: 20px;
     width: 800px;
+    box-shadow: 0px 0px 10px black;
     transition: all 1.5s;
     -webkit-transition: all 1.5s;
     border-radius: 10px;
@@ -34,7 +35,7 @@ body {
     @media (max-width: 842px) {
       /* line 26, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
       body main h1 {
-        font-size: 55px; } }
+        font-size: 40px; } }
 
 /* line 38, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 h2 {
@@ -45,7 +46,7 @@ h2 {
   @media (max-width: 842px) {
     /* line 38, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
     h2 {
-      font-size: 20px; } }
+      font-size: 18px; } }
 
 /* line 48, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .left-border {
@@ -101,8 +102,8 @@ h2 {
     @media (max-width: 842px) {
       /* line 77, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
       .btn-container input {
-        width: 40%;
-        height: 23px;
+        width: 50%;
+        height: 38px;
         font-size: 22px; } }
 
 /* line 104, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
@@ -125,7 +126,7 @@ h2 {
     /* line 104, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
     .control-btns {
       width: 40px;
-      height: 25px;
+      height: 40px;
       font-size: 15px; } }
 
 /* line 126, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
@@ -192,6 +193,17 @@ h2 {
     margin: 0;
     font-size: 20px;
     color: rgba(45, 45, 45, 0.9); }
+
+.fa-3x {
+    transition: all 1.5s;
+    -webkit-transition: all 1.5s;
+}
+
+@media (max-width: 842px) {
+            .fa-3x {
+                font-size: 2em;
+            }
+        }
 
 /* line 189, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .animate {
