Adjustments to smoothen transitions for viewport

--- a/styles.scss
+++ b/styles.scss
@@ -10,8 +10,9 @@ body {
         margin-top: 10px;
         padding: 20px;
         width: 800px;
-        transition: all 1.5s;
-        -webkit-transition: all 1.5s;
+        box-shadow: 0px 0px 10px black;
+        transition: width 1.5s;
+        -webkit-transition: width 1.5s;
         border-radius: 10px;
         background: #ECE9E6;
         /* fallback for old browsers */
@@ -30,7 +31,7 @@ body {
         transition: all 1.5s;
         -webkit-transition: all 1.5s;
         @media (max-width: 842px) {
-            font-size: 55px;
+            font-size: 40px;
         }
     }
 }
@@ -41,7 +42,7 @@ h2 {
     transition: all 1.5s;
     -webkit-transition: all 1.5s;
     @media (max-width: 842px) {
-        font-size: 20px;
+        font-size: 18px;
     }
 }
 
@@ -94,8 +95,8 @@ h2 {
         transition: all 1.5s;
         -webkit-transition: all 1.5s;
         @media (max-width: 842px) {
-            width: 40%;
-            height: 23px;
+            width: 50%;
+            height: 38px;
             font-size: 22px;
         }
     }
@@ -118,7 +119,7 @@ h2 {
     -webkit-transition: all 1.5s;
     @media (max-width: 842px) {
         width: 40px;
-        height: 25px;
+        height: 40px;
         font-size: 15px;
     }
 }
@@ -186,6 +187,16 @@ h2 {
     }
 }
 
+.fa-3x {
+    transition: all 1.5s;
+    -webkit-transition: all 1.5s;
+    @media (max-width: 842px) {
+        font-size: 2em;
+    }
+}
+
+
+
 .animate {
     transition: all 0.1s;
     -webkit-transition: all 0.1s;
@@ -204,3 +215,4 @@ button:active {
     -webkit-transform: translate(0px, 0px);
     border-bottom: 0px solid;
 }
+
